# python-ranker

./: .gitignore  LICENSE  MANIFEST.in  README.md  improve_model_cli.py  mlmodel_chooser.py  model.json  model.mlmodel  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
choosers/: basic_choosers.py  mlmodel_chooser.py  xgb_chooser.py
decisions/: Decision_v6_tests_propsal.md  setattr_speed_test.py  v6.py  v6_fast.py
docs/: .buildinfo  docsrequirements.txt  genindex.html  improveai.chooser.html  improveai.cythonized_feature_encoding.cythonized_feature_encoder.html  improveai.cythonized_feature_encoding.cythonized_feature_encoding_utils.html  improveai.cythonized_feature_encoding.html  improveai.decision.html  improveai.decision_context.html  improveai.decision_model.html  improveai.decision_tracker.html  improveai.feature_encoder.html  improveai.givens_provider.html  improveai.html  improveai.improve_cli.html  improveai.improve_model_cli.html  improveai.model_based_predictions.html  improveai.ranker.html  improveai.reward_tracker.html  improveai.scorer.html  improveai.settings.html  improveai.utils.choosers_feature_encoding_tools.html  improveai.utils.general_purpose_tools.html  improveai.utils.gzip_tools.html  improveai.utils.html  improveai.utils.url_tools.html  index.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
encoders/: feature_encoder.py
experiments/: dict_vect_example.py
improveai/: __init__.py  chooser.py  decision.py  decision_context.py  decision_model.py  decision_tracker.py  feature_encoder.py  (+8 more)
(+767 files in other folders)
