[metadata]
name = improveai
version = 8.0.0
description = Improve AI: Build self-improving apps that optimize their own variables and data structures.
long_description = file: README.md
long_description_content_type = text/markdown
author = Improve AI
author_email = support@improve.ai
url = https://improve.ai/
download_urls = https://github.com/improve-ai/python-sdk
project_urls = 
	Documentation = https://improve.ai/python-sdk/
	Code = https://github.com/improve-ai/python-sdk
	Issue tracker = https://github.com/improve-ai/python-sdk/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Intended Audience :: End Users/Desktop
	Intended Audience :: Science/Research
	Topic :: Adaptive Technologies
	Topic :: Software Development
	Topic :: Scientific/Engineering
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3 :: Only

[options]
zip_safe = False
python_requires >= 3.7
